--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,29 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'blog/base.html' %}
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-</head>
-
-<body>
-    <h1>Django Blog</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem
-        rerum ratione quae soluta autem minus. Quos sapiente, rem a iusto,
-        iure inventore voluptates at alias minima adipisci perferendis autem
-        asperiores.
-    </p>
-
-    {% for post in posts %}
-        <article>
-            <time>published: {{post.published_date}}</time>
-            <h2>{{post.title}}</h2>
-            <p>{{post.text | linebreaksbr }}</p>
-        </article>
-    {% endfor %}
-</body>
-
-</html>
+{% block content %}
+    <div class="post-container">
+        {% for post in posts %}
+            <article class="post">
+                <h2><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h2>
+                <p>{{post.text | linebreaksbr }}</p>
+                <time>published: {{post.published_date}}</time>
+            </article>
+        {% endfor %}
+    </div>
+{% endblock %}
