--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,11 +1,25 @@
 body {
     background-color: rgba(105, 90, 205, 0.401);
+    padding: 20px;
+    margin-top: 200px;
 }
 
+h2, p, time, button {
+    font-family: 'VT323'
+}
+
+/* HEADER */
 .page-header {
     background-color: slateblue;
     margin-bottom: 40px;
-    padding: 20px 30px;
+    padding: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 .page-header h1,
@@ -18,6 +32,7 @@ body {
     font-family: 'VT323';
 }
 
+/* POST */
 .post {
     padding: 20px;
     border: 3px solid slateblue;
@@ -26,6 +41,23 @@ body {
     background-color: rgb(218, 213, 255);
 }
 
-.post h2 {
-    font-family: 'VT323'
+.post-edit form { 
+    /* display: inline-block */
 }
+
+.edit-btn {
+    color: black
+}
+
+/* ANIMATIONS */
+.rotate {
+    animation: rotation 10s infinite linear; 
+}
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
