--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,30 +1,49 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="{% static 'css/blog.css' %}"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap"
+            rel="stylesheet"
+        />
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/blog.css' %}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
-</head>
+    <body>
+        <header class="page-header">
+            <h1>
+                <a href="/"> Theodo Django Blog </a>
+                {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="edit-btn">
+                    {% include './icons/file-earmark-plus.svg' %}
+                </a>
+                {% endif %}
+            </h1>
+            <img
+                class="rotate"
+                src="{% static 'images/theodo-transparent.png' %}"
+                alt="theodo logo"
+                width="100px"
+                height="100px"
+            />
+        </header>
 
-<body>
-    <header class="page-header">
-        <h1>
-            <a href="/">
-            Theodo Django Blog
-            </a>
-        </h1>
-    </header>
-
-    {% block content %}
-    {% endblock %}
-</body>
-
+        {% block content %} {% endblock %}
+    </body>
 </html>
