--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,15 +1,19 @@
-{% extends 'blog/base.html' %} 
+{% extends 'blog/base.html' %} {% block content %}
 
-{% block content %} 
-
-    <article class="post">
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.text|linebreaksbr }}</p>
-        {% if post.published_date %}
-            <time class="date">
-                {{ post.published_date }}
-            </time>
+<article class="post">
+    <aside>
+        {% if user.is_authenticated %}
+        <a href="{% url 'post_edit' pk=post.pk %}">
+            {% include './icons/pencil-fill.svg' %}
+        </a>
         {% endif %}
-    </article>
+    </aside>
+
+    <h2>{{ post.title }}</h2>
+    <p>{{ post.text|linebreaksbr }}</p>
+    {% if post.published_date %}
+    <time class="date"> {{ post.published_date }} </time>
+    {% endif %}
+</article>
 
 {% endblock %}
